finished mongodb provider, refactored bot init to use commando

--- a/config/config.json.example
+++ b/config/config.json.example
@@ -4,7 +4,7 @@
 	"databases": {
 		"default": "mongodb",
 		"mongodb": {
-			"connection": "localhost/test",
+			"connection": "mongodb://localhost/test",
 			"options": {
 				"useMongoClient": true
 			}
