--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-	"name": "spudnik",
-	"description": "An awesome chat bot for Discord.",
-	"version": "0.0.1",
-	"license": "Apache-2.0",
-	"readme": "README.md",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Richardson-Media-House/Spudnik.git"
-	},
-	"author": "Spudnik Group",
-	"contributors": [
-		"Nate Richardson <hello@naterichardson.com> (https://naterichardson.com)",
-		"Matt Carroll <admin@develogix.com> (https://develogix.com)",
-		"Joseph Moran III <joseph.moraniii@gmail.com> (https://josephmoran.co)",
-		"Jacob Smith <jacobthesmith@gmail.com>"
-	],
-	"main": "dist/spudnik.js",
-	"scripts": {
-		"launch": "node dist/spudnik.js"
-	},
-	"dependencies": {
-		"bufferutil": "^3.0.1",
-		"chalk": "^2.0.1",
-		"d20": "^1.4.1",
-		"discord.js": "^11.3.0",
-		"erlpack": "github:hammerandchisel/erlpack",
-		"feedparser": "2.2.x",
-		"ffmpeg-binaries": "^3.2.2",
-		"json2typescript": "^1.0.5",
-		"leet": "^1.3.0",
-		"m3u8stream": "^0.2.1",
-		"mongoose": "^4.11.10",
-		"node-opus": "0.2.7",
-		"remove-markdown": "0.2.2",
-		"request": "^2.81.0",
-		"soap": "^0.23.0",
-		"typescript": "^2.6.2",
-		"unshort": "^1.0.0",
-		"urban": "^0.3.1",
-		"uws": "^9.14.0",
-		"wikijs": "^4.5.0",
-		"xml2js": "^0.4.17",
-		"youtube-dl": "^1.11.1"
-	},
-	"devDependencies": {
-		"@types/mongoose": "^4.7.32",
-		"@types/node": "^9.3.0",
-		"@types/request": "^2.0.11",
-		"ts-loader": "^3.2.0",
-		"webpack": "^3.10.0"
-	}
+  "name": "spudnik",
+  "description": "An awesome chat bot for Discord.",
+  "version": "0.0.1",
+  "license": "Apache-2.0",
+  "readme": "README.md",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Richardson-Media-House/Spudnik.git"
+  },
+  "author": "Spudnik Group",
+  "contributors": [
+    "Nate Richardson <hello@naterichardson.com> (https://naterichardson.com)",
+    "Matt Carroll <admin@develogix.com> (https://develogix.com)",
+    "Joseph Moran III <joseph.moraniii@gmail.com> (https://josephmoran.co)",
+    "Jacob Smith <jacobthesmith@gmail.com>"
+  ],
+  "main": "dist/spudnik.js",
+  "scripts": {
+    "launch": "node dist/spudnik.js"
+  },
+  "dependencies": {
+    "bufferutil": "^3.0.1",
+    "chalk": "^2.0.1",
+    "d20": "^1.4.1",
+    "discord.js": "^11.3.0",
+    "discord.js-commando": "github:gawdl3y/discord.js-commando",
+    "erlpack": "github:hammerandchisel/erlpack",
+    "feedparser": "2.2.x",
+    "ffmpeg-binaries": "^3.2.2",
+    "json2typescript": "^1.0.5",
+    "leet": "^1.3.0",
+    "m3u8stream": "^0.2.1",
+    "mongoose": "^4.11.10",
+    "node-opus": "0.2.7",
+    "remove-markdown": "0.2.2",
+    "request": "^2.81.0",
+    "soap": "^0.23.0",
+    "typescript": "^2.6.2",
+    "unshort": "^1.0.0",
+    "urban": "^0.3.1",
+    "uws": "^9.14.0",
+    "wikijs": "^4.5.0",
+    "xml2js": "^0.4.17",
+    "youtube-dl": "^1.11.1"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^4.7.32",
+    "@types/node": "^9.3.0",
+    "@types/request": "^2.0.11",
+    "ts-loader": "^3.2.0",
+    "webpack": "^3.10.0"
+  }
 }
