--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,9 @@
 		// "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
 		"typeRoots": [
 			"node_modules/@types",
-			"node_modules/**/types"
+			"node_modules/**/types",
+			"node_modules/**/typings",
+			"node_modules/**/src/types"
 		], /* List of folders to include type definitions from. */
 		// "types": [],                           /* Type declaration files to be included in compilation. */
 		// "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
