--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
 		"launch": "node dist/spudnik.js"
 	},
 	"dependencies": {
+		"@types/chalk": "^2.2.0",
 		"body-parser": "^1.17.1",
 		"bufferutil": "^3.0.1",
 		"chalk": "^2.0.1",
 		"d20": "^1.4.1",
-		"discord.js": "^11.3.0",
-		"discord.js-commando": "github:gawdl3y/discord.js-commando",
+		"discord.js": "github:discordjs/discord.js",
+		"discord.js-commando": "github:discordjs/Commando",
+		"discord.js-commando-typings": "^1.2.3",
 		"erlpack": "github:hammerandchisel/erlpack",
 		"express": "^4.16.2",
 		"feedparser": "2.2.x",
@@ -46,24 +48,24 @@
 		"urban": "^0.3.1",
 		"uws": "^9.14.0",
 		"wikijs": "^4.5.0",
+		"winston": "^2.3.1",
 		"xml2js": "^0.4.17",
-		"youtube-dl": "^1.11.1",
-		"winston": "^2.3.1"
+		"youtube-dl": "^1.11.1"
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.16.3",
 		"@types/common-tags": "^1.2.5",
 		"@types/express": "^4.0.35",
-		"@types/mongoose": "^4.7.11",
+		"@types/mongoose": "^4.7.33",
 		"@types/node": "^7.0.8",
-		"@types/request-promise": "^4.1.33",
+		"@types/request-promise": "^4.1.40",
 		"@types/winston": "^2.3.1",
 		"del": "^2.2.2",
 		"gulp": "^3.9.1",
 		"gulp-nodemon": "^2.2.1",
 		"gulp-sourcemaps": "^2.6.0",
 		"gulp-tslint": "^7.1.0",
-		"gulp-typescript": "^3.1.6",
+		"gulp-typescript": "^3.2.4",
 		"nodemon": "^1.11.0",
 		"tslint": "^4.5.1",
 		"tslint-eslint-rules": "^3.5.1",
