build tweaks and readme fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,11 @@ after_install:
 branches:
   except:
   - hotfix
-notifications:
-  webhooks: http://tools.spudnik.io/travis-ci-webhook.php
+before_script:
+  - export AUTHOR_NAME="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
+after_success:
+  - chmod +x success.sh
+  - ./success.sh
+after_failure:
+  - chmod +x fail.sh
+  - ./fail.sh
