--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
 		"lint": "tslint && tsc"
 	},
 	"dependencies": {
-		"@types/chalk": "^2.2.0",
 		"body-parser": "^1.17.1",
-		"bufferutil": "^3.0.1",
 		"chalk": "^2.0.1",
 		"d20": "^1.4.1",
 		"discord.js": "github:discordjs/discord.js",
@@ -32,9 +30,9 @@
 		"erlpack": "github:hammerandchisel/erlpack",
 		"express": "^4.16.2",
 		"feedparser": "2.2.x",
-		"ffmpeg-binaries": "^3.2.2",
 		"json2typescript": "^1.0.5",
 		"leet": "^1.3.0",
+		"libsodium-wrappers": "^0.7.3",
 		"m3u8stream": "^0.2.1",
 		"moment": "^2.20.1",
 		"moment-duration-format": "^2.2.0",
@@ -44,18 +42,19 @@
 		"request": "^2.81.0",
 		"request-promise": "^4.2.2",
 		"soap": "^0.23.0",
-		"sodium": "^2.0.0",
 		"typescript": "^2.6.2",
-		"url-unshort": "^5.0.0",
 		"urban": "^0.3.1",
+		"url-unshort": "^5.0.0",
 		"uws": "^9.14.0",
 		"wikijs": "^4.5.0",
 		"winston": "^2.3.1",
 		"xml2js": "^0.4.17",
-		"youtube-dl": "^1.11.1"
+		"youtube-dl": "^1.11.1",
+		"zlib-sync": "^0.1.4"
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.16.3",
+		"@types/chalk": "^2.2.0",
 		"@types/common-tags": "^1.2.5",
 		"@types/express": "^4.0.35",
 		"@types/mongoose": "^4.7.33",
