more build updates

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,6 @@ branches:
   except:
   - hotfix
 before_install:
-- openssl aes-256-cbc -K $encrypted_779d3215c08a_key -iv $encrypted_779d3215c08a_iv
-  -in client-secret.json.enc -out client-secret.json -d
-- ssh-keygen -q -N "" -f ~/.ssh/google_compute_engine
 - export AUTHOR_NAME="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
 - npm install -g node-gyp typescript
 install:
@@ -23,12 +20,16 @@ after_failure:
 - chmod +x ./scripts/build_fail.sh
 - "./scripts/build_fail.sh"
 before_deploy:
-- zip -r dist.zip dist/ config/ package.json README.md LICENSE
+# Zip up release package
+- zip -r release.zip dist/ config/ package.json README.md LICENSE
 - mkdir -p dpl_cd_upload
-- mv dist.zip dpl_cd_upload/dist.zip
+- mv release.zip dpl_cd_upload/release.zip
+# Grab deployment configs
+- mv assets/prod/config.json config/config.json
+- mv assets/servers.json config/servers.json
 deploy:
 - provider: gae
   skip_cleanup: true
-  keyfile: client-secret.json
   default: true
+  keyfile: assets/gae-auth.json
   project: spudnik-bot
