--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,9 @@
 runtime: nodejs
-env: flex
+api_version: '1.0'
+env: flexible
+threadsafe: true
+automatic_scaling:
+  min_num_instances: 1
+  max_num_instances: 2
+  cpu_utilization:
+    target_utilization: 0.75
