--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "spudnik",
 	"description": "An awesome chat bot for Discord.",
-	"version": "0.1.3",
+	"version": "0.2.0",
 	"license": "Apache-2.0",
 	"readme": "README.md",
 	"engines": {
@@ -35,12 +35,9 @@
 		"feedparser": "2.2.x",
 		"json2typescript": "^1.0.5",
 		"leet": "^1.3.0",
-		"libsodium-wrappers": "^0.7.3",
-		"m3u8stream": "^0.2.1",
 		"moment": "^2.20.1",
 		"moment-duration-format": "^2.2.0",
 		"mongoose": "^4.11.10",
-		"node-opus": "0.2.7",
 		"remove-markdown": "0.2.2",
 		"request": "^2.81.0",
 		"request-promise": "^4.2.2",
@@ -51,9 +48,7 @@
 		"uws": "^9.14.0",
 		"wikijs": "^4.5.0",
 		"winston": "^2.3.1",
-		"xml2js": "^0.4.17",
-		"youtube-dl": "^1.11.1",
-		"zlib-sync": "^0.1.4"
+		"xml2js": "^0.4.17"
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.16.3",
@@ -65,11 +60,6 @@
 		"@types/request-promise": "^4.1.40",
 		"@types/winston": "^2.3.1",
 		"del": "^2.2.2",
-		"gulp": "^3.9.1",
-		"gulp-nodemon": "^2.2.1",
-		"gulp-sourcemaps": "^2.6.0",
-		"gulp-tslint": "^7.1.0",
-		"gulp-typescript": "^3.2.4",
 		"nodemon": "^1.11.0",
 		"tslint": "^4.5.1",
 		"tslint-eslint-rules": "^3.5.1"
