--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"moment": "^2.20.1",
 		"moment-duration-format": "^2.2.0",
 		"mongoose": "^4.11.10",
+		"node-duckduckgo": "^1.0.5",
 		"remove-markdown": "0.2.2",
 		"request": "^2.81.0",
 		"request-promise": "^4.2.2",
