--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
 		"d20": "^1.4.1",
 		"discord.js": "github:discordjs/discord.js",
 		"discord.js-commando": "github:discordjs/Commando",
-		"discord.js-commando-typings": "^1.2.3",
 		"erlpack": "github:hammerandchisel/erlpack",
 		"express": "^4.16.2",
 		"feedparser": "2.2.x",
@@ -57,12 +56,11 @@
 		"@types/common-tags": "^1.2.5",
 		"@types/express": "^4.0.35",
 		"@types/mongoose": "^4.7.33",
-		"@types/node": "^7.0.8",
+		"@types/node": "^7.0.64",
 		"@types/request-promise": "^4.1.40",
 		"@types/winston": "^2.3.1",
 		"del": "^2.2.2",
 		"nodemon": "^1.11.0",
-		"tslint": "^4.5.1",
-		"tslint-eslint-rules": "^3.5.1"
+		"tslint": "^4.5.1"
 	}
 }
