--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"erlpack": "github:hammerandchisel/erlpack",
 		"express": "^4.16.2",
 		"feedparser": "2.2.x",
+		"honeybadger": "^1.2.1",
 		"json2typescript": "^1.0.5",
 		"leet": "^1.3.0",
 		"moment": "^2.20.1",
