--- a/config/config.json.example
+++ b/config/config.json.example
@@ -5,5 +5,6 @@
 	"owner": [""],
 	"breweryDbApiKey": "",
 	"dictionaryApiKey": "",
-	"dblApiKey": ""
+	"dblApiKey": "",
+	"honeybadgerApiKey": ""
 }
