GAE environment settings update

--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,6 @@
 runtime: nodejs
 api_version: '1.0'
-env: flexible
+env: flex
 threadsafe: true
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 2
-  cpu_utilization:
-    target_utilization: 0.75
+manual_scaling:
+  instances: 1
