--- a/config/config.json.example
+++ b/config/config.json.example
@@ -6,5 +6,7 @@
 	"breweryDbApiKey": "",
 	"dictionaryApiKey": "",
 	"dblApiKey": "",
-	"honeybadgerApiKey": ""
+	"honeybadgerApiKey": "",
+	"botListUpdateInterval": 1800000,
+	"statusUpdateInterval": 30000
 }
