dev env fixes, travis build status fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,25 +9,24 @@ branches:
   - hotfix
 before_install:
 - export AUTHOR_NAME="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
-install:
+- npm install -g node-gyp typescript
+script:
 - openssl aes-256-cbc -K $encrypted_6aed427102d1_key -iv $encrypted_6aed427102d1_iv
   -in assets.zip.enc -out assets.zip -d
 - unzip assets.zip -d ./
-- npm install -g node-gyp typescript
-- npm install
 - tsc
+after_script:
+- zip -r release.zip dist/ config/ package.json README.md LICENSE
+- mkdir -p dpl_cd_upload
+- mv release.zip dpl_cd_upload/release.zip
+- mv assets/prod/config.json config/config.json
+- mv assets/servers.json config/servers.json
 after_success:
 - chmod +x ./scripts/build_success.sh
 - "./scripts/build_success.sh"
 after_failure:
 - chmod +x ./scripts/build_fail.sh
 - "./scripts/build_fail.sh"
-before_deploy:
-- zip -r release.zip dist/ config/ package.json README.md LICENSE
-- mkdir -p dpl_cd_upload
-- mv release.zip dpl_cd_upload/release.zip
-- mv assets/prod/config.json config/config.json
-- mv assets/servers.json config/servers.json
 deploy:
 - provider: releases
   api_key:
