--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
 branches:
   except:
   - hotfix
+ignore:
+ - *.md
 before_install:
 - export AUTHOR_NAME="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
 - npm install -g node-gyp typescript
