--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"moment": "^2.20.1",
 		"moment-duration-format": "^2.2.0",
 		"mongoose": "^4.11.10",
+		"mw-dict": "^3.0.0",
 		"node-duckduckgo": "^1.0.5",
 		"remove-markdown": "0.2.2",
 		"request": "^2.81.0",
@@ -49,9 +50,7 @@
 		"urban": "^0.3.1",
 		"url-unshort": "^5.0.0",
 		"uws": "^9.14.0",
-		"wikijs": "^4.5.0",
-		"winston": "^2.3.1",
-		"xml2js": "^0.4.17"
+		"wikijs": "^4.5.0"
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.16.3",
