--- a/docs/_data/command_groups/utility/goodbye.yml
+++ b/docs/_data/command_groups/utility/goodbye.yml
@@ -1,6 +1,6 @@
 usage:
-- "!goodbye message <message to display>"
+- "!goodbye message Everyone mourn the loss of {user}"
 - "!goodbye"
-- "!goodbye channel"
+- "!goodbye channel #general"
 - "!goodbye enable"
 - "!goodbye disable"
