--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"compile": "tsc"
 	},
 	"dependencies": {
+		"better-sqlite3": "^4.1.4",
 		"body-parser": "^1.17.1",
 		"chalk": "^2.0.1",
 		"d20": "^1.4.1",
@@ -53,6 +54,7 @@
 		"wikijs": "^4.5.0"
 	},
 	"devDependencies": {
+		"@types/better-sqlite3": "^3.1.3",
 		"@types/body-parser": "^1.16.3",
 		"@types/chalk": "^2.2.0",
 		"@types/common-tags": "^1.2.5",
