--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.17.1",
+		"canvas": "^1.6.11",
 		"chalk": "^2.0.1",
+		"crypto": "^1.0.1",
 		"d20": "^1.4.1",
 		"dblapi.js": "^2.0.1",
 		"discord.js": "github:discordjs/discord.js",
