--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.17.1",
-		"canvas": "^1.6.11",
 		"chalk": "^2.0.1",
-		"crypto": "^1.0.1",
 		"d20": "^1.4.1",
 		"discord.js": "11.4.2",
 		"discord.js-commando": "github:discordjs/Commando",
@@ -43,6 +41,7 @@
 		"mongoose": "^4.11.10",
 		"mw-dict": "^3.0.0",
 		"node-duckduckgo": "^1.0.5",
+		"node-superfetch": "^0.1.3",
 		"remove-markdown": "0.2.2",
 		"request": "^2.81.0",
 		"request-promise": "^4.2.2",
@@ -55,7 +54,6 @@
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.16.3",
-		"@types/chalk": "^2.2.0",
 		"@types/common-tags": "^1.2.5",
 		"@types/express": "^4.0.35",
 		"@types/mongoose": "^4.7.33",
