--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
 		"body-parser": "^1.17.1",
 		"chalk": "^2.0.1",
 		"d20": "^1.4.1",
-		"discord.js": "github:discordjs/discord.js",
-		"discord.js-commando": "github:discordjs/Commando",
-		"erlpack": "github:hammerandchisel/erlpack",
+		"discord.js": "discordjs/discord.js",
+		"discord.js-commando": "discordjs/Commando",
+		"erlpack": "hammerandchisel/erlpack",
 		"express": "^4.16.2",
 		"feedparser": "2.2.x",
 		"honeybadger": "^1.2.1",
