--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"license": "Apache-2.0",
 	"readme": "README.md",
 	"engines": {
-		"node": "8.x"
+		"node": ">=8.9.4"
 	},
 	"repository": {
 		"type": "git",
