--- a/iisnode.yml
+++ b/iisnode.yml
@@ -1,1 +1,5 @@
 nodeProcessCommandLine: "D:\Program Files (x86)\nodejs\8.9.4\node.exe"
+loggingEnabled: false
+debuggingEnabled: false
+devErrorsEnabled: false
+node_env: production
