--- a/package.json
+++ b/package.json
@@ -23,47 +23,45 @@
 		"test": "npm run lint",
 		"dev:start": "npm run test && npm start",
 		"prestart": "tsc",
-		"start": "node dist/launch.js"
+		"start": "forever dist/launch.js"
 	},
 	"dependencies": {
-		"body-parser": "^1.17.1",
-		"chalk": "^2.0.1",
+		"body-parser": "^1.18.3",
+		"chalk": "^2.4.1",
 		"d20": "^1.4.1",
-		"discord.js": "discordjs/discord.js",
-		"discord.js-commando": "discordjs/Commando",
-		"erlpack": "hammerandchisel/erlpack",
-		"express": "^4.16.2",
+		"discord.js": "github:Spudnik-Group/discord.js#9c2924a",
+		"discord.js-commando": "github:Spudnik-Group/Commando",
+		"erlpack": "github:hammerandchisel/erlpack",
+		"express": "^4.16.3",
 		"feedparser": "2.2.x",
 		"forever": "^0.15.3",
-		"honeybadger": "^1.2.1",
-		"json2typescript": "^1.0.5",
+		"honeybadger": "^1.3.0",
+		"json2typescript": "^1.0.6",
 		"leet": "^1.3.0",
-		"moment": "^2.20.1",
-		"moment-duration-format": "^2.2.0",
-		"mongoose": "^4.11.10",
+		"moment": "^2.22.2",
+		"moment-duration-format": "^2.2.2",
+		"mongoose": "^4.13.17",
 		"mw-dict": "^3.0.0",
-		"node-duckduckgo": "^1.0.5",
+		"node-duckduckgo": "^1.0.7",
 		"remove-markdown": "0.2.2",
-		"request": "^2.81.0",
+		"request": "^2.88.0",
 		"request-promise": "^4.2.2",
 		"soap": "^0.23.0",
-		"typescript": "^2.6.2",
 		"urban": "^0.3.1",
 		"url-unshort": "^5.0.0",
-		"uws": "^9.14.0",
-		"wikijs": "^4.5.0"
+		"uws": "^9.148.0",
+		"wikijs": "^4.8.1"
 	},
 	"devDependencies": {
-		"@types/body-parser": "^1.16.3",
+		"@types/body-parser": "^1.17.0",
 		"@types/chalk": "^2.2.0",
 		"@types/common-tags": "^1.2.5",
-		"@types/express": "^4.0.35",
-		"@types/mongoose": "^4.7.33",
-		"@types/node": "^7.0.64",
-		"@types/request-promise": "^4.1.40",
-		"@types/winston": "^2.3.1",
+		"@types/express": "^4.16.0",
+		"@types/mongoose": "^4.7.39",
+		"@types/node": "^7.0.70",
+		"@types/request-promise": "^4.1.42",
 		"del": "^2.2.2",
-		"nodemon": "^1.11.0",
-		"tslint": "^5.10.0"
+		"tslint": "^5.11.0",
+		"typescript": "^2.9.2"
 	}
 }
