--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 		"body-parser": "^1.18.3",
 		"chalk": "^2.4.1",
 		"d20": "^1.4.1",
-		"discord.js": "github:Spudnik-Group/discord.js#9c2924a",
-		"discord.js-commando": "github:Spudnik-Group/Commando",
+		"discord.js": "github:discordjs/discord.js",
+		"discord.js-commando": "github:discordjs/Commando",
 		"erlpack": "github:hammerandchisel/erlpack",
 		"express": "^4.16.3",
 		"feedparser": "2.2.x",
@@ -46,7 +46,7 @@
 		"remove-markdown": "0.2.2",
 		"request": "^2.88.0",
 		"request-promise": "^4.2.2",
-		"soap": "^0.23.0",
+		"soap": "^0.25.0",
 		"urban": "^0.3.1",
 		"url-unshort": "^5.0.0",
 		"uws": "^9.148.0",
@@ -55,13 +55,13 @@
 	"devDependencies": {
 		"@types/body-parser": "^1.17.0",
 		"@types/chalk": "^2.2.0",
-		"@types/common-tags": "^1.2.5",
+		"@types/common-tags": "^1.4.0",
 		"@types/express": "^4.16.0",
-		"@types/mongoose": "^4.7.39",
-		"@types/node": "^7.0.70",
+		"@types/mongoose": "^5.2.12",
+		"@types/node": "^10.9.4",
 		"@types/request-promise": "^4.1.42",
 		"del": "^2.2.2",
 		"tslint": "^5.11.0",
-		"typescript": "^2.9.2"
+		"typescript": "^3.0.3"
 	}
 }
