--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,15 @@ after_failure:
 before_deploy:
 - rm -rf docs
 - rm -rf node_modules
+- rm -rf src
+- rm -f tsconfig.json
+- rm -f tslint.json
+- rm -f typings.json
+- rm -f typings.d.ts
+- rm -f code-of-conduct.md
+- rm -f CODEOWNERS
 - |
-  if [ $TRAVIS_TAG == true ]; then
+  if [[ $TRAVIS_TAG == "true" ]]; then
     if [ $TRAVIS_BRANCH == "master" ]; then
       zip -r release.zip dist/ config/ package.json README.md LICENSE
       mkdir -p dpl_cd_upload
@@ -29,18 +36,14 @@ before_deploy:
     fi
   fi
 - |
-  if [ $TRAVIS_TAG == false ]; then
-    if [ $TRAVIS_BRANCH == "master" ]; then
-      gpg --passphrase $encrypt_key assets.zip.gpg
-      unzip assets.zip -d ./
-      mkdir config
+  if [[ $TRAVIS_TAG == "false" ]]; then
+    gpg --passphrase $encrypt_key assets.zip.gpg
+    unzip assets.zip -d ./
+    if [[ $TRAVIS_BRANCH == "master" ]]; then
       mv assets/prod/config.json config/config.json
       cp assets/servers.json config/servers.json
     fi
-    if [ $TRAVIS_BRANCH == "staging" ]; then
-      gpg --passphrase $encrypt_key assets.zip.gpg
-      unzip assets.zip -d ./
-      mkdir config
+    if [[ $TRAVIS_BRANCH == "staging" ]]; then
       mv assets/staging/config.json config/config.json
       cp assets/servers.json config/servers.json
     fi
