switched error monitoring support to rollbar

--- a/config/config.json.example
+++ b/config/config.json.example
@@ -6,7 +6,7 @@
 	"breweryDbApiKey": "",
 	"dictionaryApiKey": "",
 	"dblApiKey": "",
-	"honeybadgerApiKey": "",
+	"rollbarApiKey": "",
 	"botListUpdateInterval": 1800000,
 	"statusUpdateInterval": 30000
 }
