--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
 		"erlpack": "github:hammerandchisel/erlpack",
 		"express": "^4.16.3",
 		"feedparser": "2.2.x",
-		"honeybadger": "^1.3.0",
 		"json2typescript": "^1.0.6",
 		"leet": "^1.3.0",
 		"moment": "^2.22.2",
@@ -46,6 +45,7 @@
 		"remove-markdown": "0.2.2",
 		"request": "^2.88.0",
 		"request-promise": "^4.2.2",
+		"rollbar": "^2.4.6",
 		"soap": "^0.25.0",
 		"urban": "^0.3.1",
 		"url-unshort": "^5.0.0",
