--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,7 @@
 		"noImplicitAny": true,
 		"moduleResolution": "node",
 		"baseUrl": ".",
-		"experimentalDecorators": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+		"experimentalDecorators": true
 	},
 	"exclude": [
 		"node_modules",
