devs don't know how to test before merging to master

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
 		"body-parser": "^1.18.3",
 		"chalk": "^2.4.1",
 		"d20": "^1.4.1",
-		"discord.js": "github:discordjs/discord.js",
-		"discord.js-commando": "github:discordjs/Commando",
+		"discord.js": "github:Spudnik-Group/discord.js",
+		"discord.js-commando": "github:Spudnik-Group/Commando",
 		"erlpack": "github:hammerandchisel/erlpack",
 		"express": "^4.16.3",
 		"feedparser": "2.2.x",
