actually fixed the starboard feature this time.

--- a/docs/_data/command_groups/utility/starboard.yml
+++ b/docs/_data/command_groups/utility/starboard.yml
@@ -1,4 +1,5 @@
 usage:
+  - "!starboard status"
   - "!starboard trigger"
   - "!starboard trigger :stuck_out_tongue:"
   - "!starboard channel #starboard"
