--- a/package.json
+++ b/package.json
@@ -30,13 +30,12 @@
 		"body-parser": "^1.18.3",
 		"chalk": "^2.4.1",
 		"d20": "^1.4.1",
+		"date-fns": "^1.30.1",
 		"discord.js": "github:Spudnik-Group/discord.js",
 		"discord.js-commando": "github:Spudnik-Group/Commando",
 		"erlpack": "github:hammerandchisel/erlpack",
 		"express": "^4.16.3",
 		"leet": "^1.3.0",
-		"moment": "^2.22.2",
-		"moment-duration-format": "^2.2.2",
 		"mongoose": "^4.13.17",
 		"mw-dict": "^3.0.0",
 		"node-duckduckgo": "^1.0.7",
