--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"request-promise": "^4.2.2",
 		"rollbar": "^2.4.6",
 		"soap": "^0.25.0",
-		"urban": "^0.3.1",
+		"urban-dictionary": "^2.2.1",
 		"url-unshort": "^5.0.0",
 		"uws": "^9.148.0",
 		"wikijs": "^4.8.1"
