--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "spudnik",
 	"description": "An awesome chat bot for Discord.",
-	"version": "0.6.3",
+	"version": "1.0.0",
 	"license": "Apache-2.0",
 	"readme": "README.md",
 	"engines": {
-		"node": ">=8.11.3"
+		"node": ">=10.15.0"
 	},
 	"repository": {
 		"type": "git",
@@ -27,38 +27,35 @@
 		"start:docs": "cd ./docs && bundle exec jekyll serve"
 	},
 	"dependencies": {
-		"body-parser": "^1.18.3",
-		"chalk": "^2.4.1",
+		"@discordjs/uws": "^11.149.1",
+		"chalk": "^2.4.2",
 		"d20": "^1.4.1",
 		"date-fns": "^1.30.1",
 		"discord.js": "github:Spudnik-Group/discord.js",
 		"discord.js-commando": "github:Spudnik-Group/Commando",
-		"erlpack": "github:hammerandchisel/erlpack",
-		"express": "^4.16.3",
+		"erlpack": "github:discordapp/erlpack",
+		"express": "^4.16.4",
 		"leet": "^1.3.0",
 		"mongoose": "^4.13.17",
 		"mw-dict": "^3.0.0",
 		"node-duckduckgo": "^1.0.7",
-		"node-superfetch": "^0.1.3",
+		"node-superfetch": "^0.1.9",
 		"remove-markdown": "0.2.2",
 		"request-promise": "^4.2.2",
-		"rollbar": "^2.4.6",
+		"rollbar": "^2.5.1",
 		"soap": "^0.25.0",
 		"urban-dictionary": "^2.2.1",
 		"url-unshort": "^5.0.0",
-		"uws": "^9.148.0",
-		"wikijs": "^4.8.1"
+		"wikijs": "^4.11.1"
 	},
 	"devDependencies": {
-		"@types/body-parser": "^1.17.0",
 		"@types/chalk": "^2.2.0",
-		"@types/common-tags": "^1.4.0",
+		"@types/common-tags": "^1.8.0",
 		"@types/express": "^4.16.0",
-		"@types/mongoose": "^5.2.12",
-		"@types/node": "^10.9.4",
+		"@types/mongoose": "^5.3.7",
+		"@types/node": "^10.12.18",
 		"@types/request-promise": "^4.1.42",
-		"del": "^2.2.2",
-		"tslint": "^5.11.0",
-		"typescript": "^3.0.3"
+		"tslint": "^5.12.1",
+		"typescript": "^3.2.2"
 	}
 }
