--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 	"devDependencies": {
 		"@types/chalk": "^2.2.0",
 		"@types/common-tags": "^1.8.0",
+		"@types/date-fns": "^2.6.0",
 		"@types/express": "^4.16.0",
 		"@types/mongoose": "^5.3.7",
 		"@types/node": "^10.12.18",
