--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
 		"chalk": "^2.4.2",
 		"d20": "^1.4.1",
 		"date-fns": "^1.30.1",
-		"discord.js": "github:Spudnik-Group/discord.js",
-		"discord.js-commando": "github:Spudnik-Group/Commando",
+		"discord.js": "discordjs/discord.js#04fa56d",
+		"discord.js-commando": "discordjs/Commando#d07be22",
 		"erlpack": "github:discordapp/erlpack",
-		"express": "^4.16.4",
 		"leet": "^1.3.0",
 		"mongoose": "^4.13.17",
 		"mw-dict": "^3.0.0",
@@ -52,7 +51,6 @@
 		"@types/chalk": "^2.2.0",
 		"@types/common-tags": "^1.8.0",
 		"@types/date-fns": "^2.6.0",
-		"@types/express": "^4.16.1",
 		"@types/mongoose": "^5.3.24",
 		"@types/node": "^10.14.4",
 		"@types/request-promise": "^4.1.42",
