--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"@discordjs/uws": "^11.149.1",
+		"@scoutsdk/server-sdk": "^0.7.0",
 		"chalk": "^2.4.2",
 		"d20": "^1.4.1",
 		"date-fns": "^1.30.1",
