--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@types/request-promise": "^4.1.42",
 		"nodemon": "^1.18.10",
 		"tslint": "^5.15.0",
+		"tslint-jsdoc-rules": "^0.2.0",
 		"typescript": "^3.2.2"
 	}
 }
