--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "spudnik",
 	"description": "An awesome chat bot for Discord.",
-	"version": "0.8.0",
+	"version": "0.8.1",
 	"license": "Apache-2.0",
 	"readme": "README.md",
 	"engines": {
-		"node": "^11.x"
+		"node": "^10.16.0"
 	},
 	"repository": {
 		"type": "git",
