--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"preinstall": "npm i -g node-gyp typescript",
 		"lint": "tslint -p ./tslint.json",
 		"test": "npm run lint",
-		"prestart": "tsc",
+		"prestart": "rimraf ./dist && tsc",
 		"start": "node ./node_modules/nodemon/bin/nodemon.js",
 		"start:prod": "node ./dist/launch.js",
 		"start:docs": "cd ./docs && bundle exec jekyll serve"
@@ -56,6 +56,7 @@
 		"@types/node": "10.14.6",
 		"@types/request-promise": "4.1.43",
 		"nodemon": "1.19.0",
+		"rimraf": "^2.6.3",
 		"tslint": "5.16.0",
 		"tslint-jsdoc-rules": "0.2.0",
 		"typescript": "3.4.5"
