--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"mongoose": "^5.4.21",
 		"mw-dict": "^3.0.0",
 		"remove-markdown": "0.3.0",
+		"markdown-escape": "1.0.2",
 		"rollbar": "^2.5.1",
 		"soap": "^0.29.0",
 		"urban-dictionary": "^2.2.1",
