--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
         "axios": "^0.19.0",
         "chalk": "^2.4.2",
         "d20": "^1.4.1",
-        "discord.js": "discordjs/discord.js#04fa56d",
+        "discord.js": "discordjs/discord.js#fe7df70",
         "erlpack": "github:discordapp/erlpack",
-        "klasa": "github:dirigeants/klasa",
+        "klasa": "github:dirigeants/klasa#4fa20eb",
         "leet": "^1.3.0",
         "markdown-escape": "1.0.2",
         "mongodb": "^3.3.4",
