--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     ],
     "main": "dist/launch.js",
     "scripts": {
-        "preinstall": "npm i -g node-gyp typescript",
-        "lint": "tslint -p ./tslint.json",
+        "preinstall": "npm i -g node-gyp typescript@3.6.5",
+        "lint": "eslint --ext ts src/*",
         "test": "npm run lint",
         "prestart": "rimraf ./dist && tsc",
         "start": "node ./node_modules/nodemon/bin/nodemon.js",
@@ -49,13 +49,17 @@
         "@types/chalk": "2.2.0",
         "@types/common-tags": "1.8.0",
         "@types/node": "10.17.16",
-        "@typescript-eslint/eslint-plugin": "^1.9.0",
-        "@typescript-eslint/parser": "^1.9.0",
+        "@typescript-eslint/eslint-plugin": "^2.21.0",
+        "@typescript-eslint/parser": "^2.21.0",
         "common-tags": "^1.8.0",
         "eslint": "^5.16.0",
         "eslint-config-klasa": "dirigeants/klasa-lint",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-node": "^11.0.0",
+        "eslint-plugin-prefer-arrow": "^1.1.7",
+        "eslint-plugin-unicorn": "^16.1.1",
         "nodemon": "1.19.4",
         "rimraf": "3.0.2",
-        "typescript": "3.7.2"
+        "typescript": "3.6.5"
     }
 }
