--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
 		"resolveJsonModule": true,
 		"forceConsistentCasingInFileNames": true,
 		"paths": {
-            "@utils/*": ["src/lib/util/*"],
-			"@lib/*": ["src/lib/*"],
-			"@root/*": ["src/*"]
+            "@utils/*": ["./src/lib/util/*"],
+			"@lib/*": ["./src/lib/*"],
+			"@root/*": ["./src/*"]
         }
 	},
 	"include": [
