--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,14 +14,14 @@
 		"strict": false,
 		"noUnusedLocals": true,
 		"moduleResolution": "node",
-		"baseUrl": ".",
+		"baseUrl": "./src",
 		"experimentalDecorators": true,
 		"resolveJsonModule": true,
 		"forceConsistentCasingInFileNames": true,
 		"paths": {
-            "@utils/*": ["./src/lib/util/*"],
-			"@lib/*": ["./src/lib/*"],
-			"@root/*": ["./src/*"]
+            "@utils/*": ["./lib/util/*"],
+			"@lib/*": ["./lib/*"],
+			"@root/*": ["./*"]
         }
 	},
 	"include": [
