--- a/package.json
+++ b/package.json
@@ -32,15 +32,21 @@
         "@klasa/utils": "^0.0.4",
         "axios": "^0.19.0",
         "chalk": "^2.4.2",
+        "connect-mongo": "^3.2.0",
         "d20": "^1.4.1",
         "discord.js": "discordjs/discord.js#fe7df70",
         "erlpack": "github:discordapp/erlpack",
+        "express": "^4.17.1",
+        "express-session": "^1.17.0",
+        "helmet": "^3.21.3",
         "klasa": "github:dirigeants/klasa#sgn",
         "leet": "^1.3.0",
         "markdown-escape": "1.0.2",
         "module-alias": "^2.2.2",
         "mongodb": "^3.3.4",
         "mw-dict": "^3.0.0",
+        "passport": "^0.4.1",
+        "passport-discord": "^0.1.3",
         "remove-markdown": "0.3.0",
         "rollbar": "^2.5.1",
         "soap": "^0.29.0",
@@ -53,8 +59,11 @@
         "@discordjs/collection": "^0.1.4",
         "@types/chalk": "2.2.0",
         "@types/common-tags": "1.8.0",
+        "@types/express": "^4.17.3",
+        "@types/express-session": "^1.17.0",
         "@types/module-alias": "^2.0.0",
         "@types/node": "10.17.16",
+        "@types/passport": "^1.0.2",
         "@typescript-eslint/eslint-plugin": "^2.21.0",
         "@typescript-eslint/parser": "^2.21.0",
         "common-tags": "^1.8.0",
