--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "@klasa/utils": "^0.0.4",
         "axios": "^0.19.0",
         "chalk": "^2.4.2",
-        "connect-mongo": "^3.2.0",
+        "connect-mongodb-session": "^2.3.1",
         "d20": "^1.4.1",
         "discord.js": "discordjs/discord.js#fe7df70",
         "erlpack": "github:discordapp/erlpack",
