--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@klasa/request-handler": "^0.0.3",
         "@klasa/utils": "^0.0.4",
         "axios": "^0.19.0",
+        "bufferutil": "^4.0.1",
         "chalk": "^2.4.2",
         "d20": "^1.4.1",
         "discord.js": "discordjs/discord.js#fe7df70",
@@ -46,7 +47,9 @@
         "soap": "^0.29.0",
         "urban-dictionary": "^2.2.1",
         "url-unshort": "^5.0.0",
+        "utf-8-validate": "^5.0.2",
         "wikijs": "^6.0.0",
+        "zlib-sync": "^0.1.6",
         "zucc": "^0.1.2"
     },
     "devDependencies": {
